--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bookstore Checkout (Victim Page)</title>
+    <title>Bookstore Checkout</title>
 </head>
 <body>
-    <h2>Awesome Bookstore - Secure Checkout</h2>
-    <form action="dummy_processor.php" method="get">
+    <h2>Online Bookstore - Checkout</h2>
+    <form action="process.php" method="get">
         <label for="name">Full Name:</label><br>
-        <input type="text" id="name" name="name"><br><br>
+        <input type="text" id="name" name="name" value="Test User"><br><br>
 
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
+        <input type="password" id="password" name="password" value="mypassword"><br><br>
 
-        <!-- This is the hidden field the attacker will target -->
-        <!-- Let's pretend this is the book's price -->
+        <!-- Hidden field representing book price -->
         <input type="hidden" id="book_price" name="book_price" value="50">
+        
+        <!-- Hidden field representing user ID -->
+        <input type="hidden" id="user_id" name="user_id" value="1001">
 
         <input type="submit" value="Complete Purchase">
     </form>
-    <p><strong>Note:</strong> This is a demo page for an educational security assignment.</p>
+    
+    <p><strong>Note:</strong> This form uses GET method to demonstrate security vulnerabilities.</p>
 </body>
 </html>
